syntax = "proto3";

package pb;

option go_package = "./pb";

message LoginReq {
    string username = 1;
    string password = 2;
}

message LoginResp {
    int32  code = 1;      // 0-成功, 1-失败
    string message = 2;
    string token = 3;
    string playerId = 4;
}